[metadata]
name = vdibroker
summary = VDI broker
description-file =
    README.rst
author = Cloudbase Solutions SRL
author-email = info@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    vdibroker

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    vdi-broker-api = vdibroker.cmd.api:main

[wheel]
universal = 1
